--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "@vercel/postgres": "https://aistudiocdn.com/@vercel/postgres@^0.10.0"
   }
 }
 </script>
