--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "@vercel/postgres": "https://aistudiocdn.com/@vercel/postgres@^0.10.0"
+    "@vercel/postgres": "https://aistudiocdn.com/@vercel/postgres@^0.10.0",
+    "pg": "https://aistudiocdn.com/pg@^8.16.3"
   }
 }
 </script>
