--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "@vercel/postgres": "https://aistudiocdn.com/@vercel/postgres@^0.10.0",
-    "pg": "https://aistudiocdn.com/pg@^8.16.3"
+    "pg": "https://aistudiocdn.com/pg@^8.16.3",
+    "mongodb": "https://aistudiocdn.com/mongodb@^7.0.0"
   }
 }
 </script>
