--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "@vercel/postgres": "https://aistudiocdn.com/@vercel/postgres@^0.10.0",
     "pg": "https://aistudiocdn.com/pg@^8.16.3",
-    "mongodb": "https://aistudiocdn.com/mongodb@^7.0.0"
+    "mongodb": "https://aistudiocdn.com/mongodb@^7.0.0",
+    "dotenv/": "https://aistudiocdn.com/dotenv@^17.2.3/"
   }
 }
 </script>
