--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     "pg": "https://aistudiocdn.com/pg@^8.16.3",
     "mongodb": "https://aistudiocdn.com/mongodb@^7.0.0",
     "dotenv/": "https://aistudiocdn.com/dotenv@^17.2.3/",
-    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3"
+    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3",
+    "@hello-pangea/dnd": "https://aistudiocdn.com/@hello-pangea/dnd@^17.0.0"
   }
 }
 </script>
